last known working version

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 		<header class='mainHeader'>
 		
-		<select id="dropDownMenu">
+		<select id="dropDownMenu" onChange='prevResults(state)'>
 			
 		</select>
 		
