--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	
 	</div>
 		
-	<div class='js-results'></div>
-	<div class='js-prevResults'></div>
+	<div class='js-results-top3'></div>
+	<div class='js-results-last3'></div>
 	
 <script type = 'text/javascript' src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 <script src='app.js'></script>
