Attempt to organize CSS
- float-grid.css - intial commit, where the float css
  was taken out of main.css and placed in this file
i# Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>JMP | 1st Cap</title>
 	<meta charset='UTF-8'>
 	<link rel='stylesheet' href='main.css'>
+	<link rel='stylesheet' href='float-grid.css'>
 	
 </head>
 <body>
