input required update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		
 				<form class='js-form'>
 					
-					<div><input type='search' class='js-input' placeholder='What game do you want to watch?'></div>
+					<div><input type='search' class='js-input' placeholder='What game do you want to watch?' required></div>
 					<div><button type='submit' class='js-button'>Search</button></div>
 					<div><select id="dropDownMenu" onChange='prevResults(state)'><option value="" disabled selected>Previous Results</option></select></div>
 				
