--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<hmtl>
+<html>
 <head>
 	<title>JMP | 1st Cap</title>
 	<meta charset='UTF-8'>
-	<link rel='stylesheet' href='main.css'>
-	<link rel='stylesheet' href='float-grid.css'>
+	<link rel='stylesheet' href='/css/main.css'>
+	<link rel='stylesheet' href='/css/float-grid.css'>
 	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 </head>
 <body>
@@ -43,6 +43,6 @@
 	
 	
 <script type = 'text/javascript' src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-<script src='app.js'></script>
+<script src='client.js'></script>
 </body>
 </hmtl>
